# Python-Django-nmadcoder

./: .gitignore  README.md  baekjoon_3.py  baekjoon_Step1.py  baekjoon_Step2.py  baekjoon_Step3.py  baekjoon_Step4.py  practice.py
Django/: aboutDjango.py
Django/nomad-backend/: gitCheck.py  pyproject.toml
Django/nomad-backend/bookings/: admin.py  models.py  serializers.py
Django/nomad-backend/bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_time.py  0003_alter_booking_experiences_alter_booking_rooms_and_more.py
Django/nomad-backend/categories/: admin.py  models.py  serializers.py  views.py
Django/nomad-backend/categories/migrations/: 0001_initial.py  0002_rename_catogory_category.py  0003_alter_category_options.py
Django/nomad-backend/common/: models.py
Django/nomad-backend/common/migrations/: 0001_initial.py
Django/nomad-backend/config/: authentication.py  settings.py  urls.py
Django/nomad-backend/direct_messages/: admin.py  models.py
Django/nomad-backend/direct_messages/migrations/: 0001_initial.py  0002_alter_message_rooms_alter_message_users.py
Django/nomad-backend/experiences/: admin.py  models.py  views.py
Django/nomad-backend/houses/: admin.py  models.py
Django/nomad-backend/medias/: models.py
Django/nomad-backend/reviews/: admin.py  models.py
Django/nomad-backend/rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
Django/nomad-backend/users/: admin.py  models.py  urls.py  views.py
Django/nomad-backend/wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+26 files in other folders)
