[tool.poetry]
name = "nomad-backend"
version = "0.1.0"
description = ""
authors = ["yuunseo <dbstj7457@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nomad_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
