[tool.poetry]
name = "nomad-backend"
version = "0.1.0"
description = ""
authors = ["yuunseo <dbstj7457@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nomad_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
pillow = "^10.0.0"
djangorestframework = "^3.14.0"
pyjwt = "^2.8.0"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
